Update fav icon

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="https://img.freepik.com/free-vector/books-stack-realistic_1284-4735.jpg?t=st=1720011552~exp=1720015152~hmac=8b77e1fc4e780ad441c4db4f40ec2e77dcd1e5d24ffe3457691c4832e9c793eb&w=740" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BookiFy - Online Book Store</title>
   </head>
